# gpt-fcn-calls

./: .gitignore  fcn_call_model.py  model_solver.ipynb  model_solver.py  pyproject.toml  requirements.txt  streamlit_app.py  totp_creation.ipynb
