[project]
name = "gpt-fcn-calls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "openai>=1.52.2",
    "ortools>=9.11.4210",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydantic>=2.9.2",
    "pyotp>=2.9.0",
    "python-dotenv>=1.0.1",
    "qrcode>=8.0",
    "streamlit>=1.39.0",
    "watchdog>=5.0.3",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
]
